Support reading full library, add print_serato_library
- Support reading full contents of library, including database V2 and
all crates.
- Add print_serato_library tool that prints contents of library in
human-readble form.
- Fix a bug where fields over 255 bytes were not handled correctly.

There is a known bug in this version where nested crates are not handled
correctly.

--- a/src/BUILD
+++ b/src/BUILD
@@ -7,8 +7,13 @@ cc_library(
     hdrs = [
         "seratocrates.h",
     ],
+    includes = ["."],
     # Source files need C++17 to compile but seratocrates.h is C++11 compatible.
     copts = [
         "-std=c++17",
     ],
+    linkopts = [
+        "-lstdc++fs",
+    ],
+    visibility = ["//visibility:public"],
 )
