Move disk file read code into read_disk_files.h

--- a/src/BUILD
+++ b/src/BUILD
@@ -2,6 +2,7 @@ cc_library(
     name = "seratocrates",
     srcs = [
         "memberpointer.h",
+        "read_disk_files.h",
         "seratocrates.cpp",
     ],
     hdrs = [
